Further reinforce overflow prevention

--- a/styles/all/theme/pmbars.css
+++ b/styles/all/theme/pmbars.css
@@ -1,6 +1,7 @@
 .pmbars-outer {
 	background-color: #ebebeb;
 	border-radius: 30px;
+	overflow-x: hidden;
 	width: 100%;
 	height: 8px;
 	margin: -8px 0 8px;
